--- a/corporate-1.html
+++ b/corporate-1.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
         <meta name="keywords" content="">
-		<title>Mono - Corporate 1</title>
+		<title>Smart Portal - Home</title>
 		<!-- Favicon -->
         <link href="../assets/images/favicon.png" rel="shortcut icon">
 		<!-- CSS -->
@@ -27,7 +27,7 @@
 			<div class="container">
 				<!-- Logo -->
 				<div class="header-logo">
-					<h3><a href="#">mono</a></h3>
+					<h3><a href="#">Smart Portal of Defining Challenges</a></h3>
 					<!-- 
 					<img class="logo-dark" src="../assets/images/your-logo-dark.png" alt="">
 					<img class="logo-light" src="../assets/images/your-logo-light.png" alt=""> 
@@ -37,38 +37,35 @@
 				<div class="header-menu">
 					<ul class="nav">
 						<li class="nav-item">
-							<a class="nav-link" href="#">Link Only</a>
+							<a class="nav-link" href="#">About Us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Dropdown</a>
+							<a class="nav-link" href="#">Challenges</a>
 							<ul class="nav-dropdown">
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Dropdown Item</a></li>
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Dropdown Item</a></li>
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Dropdown Item</a></li>
-								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Dropdown Item</a></li>
+								<li class="nav-dropdown-item">
+									<a class="nav-dropdown-link" href="#">Challenges by Sector</a>
+									<ul class="nav-subdropdown">
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Industry and Energy committee</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Real Estate and Construction committee</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Transportation and Logistics committee</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Health committee</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Finance, Insurance and Tax committe</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Food Wealth committee</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Technology committee</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Hospitality and Tourism committee</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Commercial Markets committee</a></li>
+										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Education Committee</a></li>
+									</ul>
+								</li>
+							<a class="nav-link" href="#">Submit a Challenge</a>
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Subdropdown</a>
+							<a class="nav-link" href="#">Partners</a>
 							<ul class="nav-dropdown">
-								<li class="nav-dropdown-item">
-									<a class="nav-dropdown-link" href="#">Dropdown Item</a>
-									<ul class="nav-subdropdown">
-										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Subdropdown Item</a></li>
-										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Subdropdown Item</a></li>
-										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Subdropdown Item</a></li>
-										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Subdropdown Item</a></li>
-									</ul>
-								</li>
-								<li class="nav-dropdown-item">
-									<a class="nav-dropdown-link" href="#">Dropdown Item</a>
-									<ul class="nav-subdropdown">
-										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Subdropdown Item</a></li>
-										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Subdropdown Item</a></li>
-										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Subdropdown Item</a></li>
-										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Subdropdown Item</a></li>
-									</ul>
-								</li>
+								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">BIPA</a></li>
+								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">Bahrain Chamber</a></li>
+								<li class="nav-dropdown-item"><a class="nav-dropdown-link" href="#">UNDP</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -92,12 +89,12 @@
 		<!-- Hero section -->
 		<div class="owl-carousel owl-nav-overlay owl-dots-overlay" data-owl-nav="false" data-owl-dots="true" data-owl-items="1" data-owl-autoPlay="true">
 			<!-- Slider Item 1 -->
-			<div class="bg-image" data-bg-src="../assets/images/background.jpg">
+			<div class="bg-image" data-bg-src="../assets/images/img3.jpg">
 				<div class="section-xl bg-black-03">
 					<div class="container">
 						<div class="row">
 							<div class="col-12 col-md-10 col-lg-8 col-xl-6">
-								<h1>Professionally Designed for Corporates</h1>
+								<h1>Submit Your Challenges Now!</h1>
 								<a class="button button-lg button-radius button-white-3 margin-top-20" href="#">Learn more</a>
 							</div>
 						</div><!-- end row -->
@@ -105,12 +102,12 @@
 				</div>
 			</div>
 			<!-- Slider Item 2 -->
-			<div class="bg-image" data-bg-src="../assets/images/background.jpg">
+			<div class="bg-image" data-bg-src="../assets/images/img4.jpg">
 				<div class="section-xl bg-black-03">
 					<div class="container">
 						<div class="row">
 							<div class="col-12 col-md-10 col-lg-8 col-xl-6">
-								<h1>Professionally Designed for Corporates</h1>
+								<h1>Learn More About Us</h1>
 								<a class="button button-lg button-radius button-white-3 margin-top-20" href="#">Learn more</a>
 							</div>
 						</div><!-- end row -->
@@ -164,29 +161,29 @@
 		<!-- end About section -->
 
 		<!-- Facts section -->
-		<div class="section-lg bg-image parallax" data-bg-src="../assets/images/background.jpg">
+		<div class="section-lg bg-image parallax" data-bg-src="../assets/images/img2.jpg">
 			<div class="bg-dark-grey-07">
 				<div class="container text-center">
 					<div class="row">
 						<!-- Counter box 1 -->
 						<div class="col-12 col-sm-6 col-md-3">
-							<h1 class="font-weight-light counter">100</h1>
-							<h6 class="font-small font-weight-normal uppercase">Fact One</h6>
+							<h1 class="font-weight-light counter">0</h1>
+							<h6 class="font-small font-weight-normal uppercase">Number of Submitted Challenges</h6>
 						</div>
 						<!-- Counter box 2 -->
 						<div class="col-12 col-sm-6 col-md-3">
-							<h1 class="font-weight-light counter">100</h1>
-							<h6 class="font-small font-weight-normal uppercase">Fact Two</h6>
+							<h1 class="font-weight-light counter">0</h1>
+							<h6 class="font-small font-weight-normal uppercase">Proposed Solutions</h6>
 						</div>
 						<!-- Counter box 3 -->
 						<div class="col-12 col-sm-6 col-md-3">
-							<h1 class="font-weight-light counter">100</h1>
-							<h6 class="font-small font-weight-normal uppercase">Fact Three</h6>
+							<h1 class="font-weight-light counter">0</h1>
+							<h6 class="font-small font-weight-normal uppercase">Challenges Under Review</h6>
 						</div>
 						<!-- Counter box 4 -->
 						<div class="col-12 col-sm-6 col-md-3">
-							<h1 class="font-weight-light counter">100</h1>
-							<h6 class="font-small font-weight-normal uppercase">Fact Four</h6>
+							<h1 class="font-weight-light counter">0</h1>
+							<h6 class="font-small font-weight-normal uppercase">Completed Challenges</h6>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
@@ -333,7 +330,7 @@
 								<li><a href="#">About us</a></li>
 								<li><a href="#">Team</a></li>
 								<li><a href="#">Prices</a></li>
-								<li><a href="../pages/contact-1.html">Contact</a></li>
+								<li><a href="#">Contact</a></li>
 							</ul>
 						</div>
 						<div class="col-6 col-sm-6 col-lg-3">
