--- a/corporate-1.html
+++ b/corporate-1.html
@@ -57,7 +57,9 @@
 										<li class="nav-subdropdown-item"><a class="nav-subdropdown-link" href="#">Education Committee</a></li>
 									</ul>
 								</li>
-							<a class="nav-link" href="#">Submit a Challenge</a>
+							<li class="nav-dropdown-item">
+									<a class="nav-dropdown-link" href="#">Submit a Challenge</a>
+							</li>
 							</ul>
 						</li>
 						<li class="nav-item">
@@ -75,7 +77,7 @@
 					<ul class="list-inline">
 						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
 					</ul>
 				</div>
 				<!-- Menu Toggle -->
@@ -102,7 +104,7 @@
 				</div>
 			</div>
 			<!-- Slider Item 2 -->
-			<div class="bg-image" data-bg-src="../assets/images/img4.jpg">
+			<div class="bg-image" data-bg-src="../assets/images/img6.jpg">
 				<div class="section-xl bg-black-03">
 					<div class="container">
 						<div class="row">
@@ -197,7 +199,7 @@
 				<div class="margin-bottom-70">
 					<div class="row align-items-end">
 						<div class="col-12 col-sm-6">
-							<h2 class="font-weight-normal margin-0">Latest Posts</h2>
+							<h2 class="font-weight-normal margin-0">Latest News</h2>
 						</div>
 						<div class="col-12 col-sm-6 text-sm-right">
 							<a class="button-text-1" href="#">Read All Posts</a>
@@ -276,43 +278,28 @@
 				<div class="margin-bottom-70">
 					<div class="row text-center">
 						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-							<h2 class="font-weight-normal">Our Trusted Clients</h2>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+							<h2 class="font-weight-normal">Meet the Partners</h2>
+							<p>Here are the partners for this project.</p>
 						</div>
 					</div>
 				</div>
-				<ul class="clients-grid column-5">
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="#"><img src="../assets/images/col-5.jpg" alt=""></a>
-					</li>
-				</ul>
+				<div class="row col-spacing-50">
+					<div class="col-12 col-lg-4">
+					<div class="bg-dark-lighter padding-30">
+							<p><a href="#">Bahrain Chamber</a></p>
+					</div>
+					</div>
+				<div class="col-12 col-lg-4">
+				<div class="bg-dark-lighter padding-30">
+      <p><a href="#">BIPA</a></p>
+    </div>
+  </div>
+  <div class="col-12 col-lg-4">
+    <div class="bg-dark-lighter padding-30">
+      <p><a href="#">UNDP</a></p>
+    </div>
+  </div>
+</div>
 			</div><!-- end container -->
 		</div>
 		<!-- end Clients section -->
@@ -322,7 +309,7 @@
 				<div class="container">
 					<div class="row col-spacing-20">
 						<div class="col-6 col-sm-6 col-lg-3">
-							<h3>mono</h3>
+							<h3>Smart Portal of Defining Challenges</h3>
 						</div>
 						<div class="col-6 col-sm-6 col-lg-3">
 							<h6 class="font-small font-weight-normal uppercase">Useful Links</h6>
@@ -356,7 +343,7 @@
 
 					<div class="row col-spacing-10">
 						<div class="col-12 col-md-6 text-center text-md-left">
-							<p>&copy; 2021 FlaTheme, All Rights Reserved.</p>
+							<p>&copy; 2021 Bahrain Chamber, All Rights Reserved.</p>
 						</div>
 						<div class="col-12 col-md-6 text-center text-md-right">
 							<ul class="list-inline">
