--- a/corporate-1.html
+++ b/corporate-1.html
@@ -125,18 +125,19 @@
 				<div class="row icon-5xl">
 					<div class="col-12 col-md-4">
 						<i class="ti-briefcase text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Professional</h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<h5 class="font-weight-normal margin-top-20">Centralized</h5>
+						<p>There are many undefined challenges in the public sector and not link to each other’s in one place  which most of entities challenges are scattered among the organization
+.</p>
 					</div>
 					<div class="col-12 col-md-4">
 						<i class="ti-settings text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Experienced</h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<h5 class="font-weight-normal margin-top-20">Ease of use</h5>
+						<p>Challenges can be submitted with few clicks and participating on the solution of the challenges is an easy task which helps achieve good results in finding the solution for the challenges.</p>
 					</div>
 					<div class="col-12 col-md-4">
 						<i class="ti-face-smile text-dark"></i>
 						<h5 class="font-weight-normal margin-top-20">Connected</h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<p>By being a part of the industrial innovation smart portal should play a role in sharing knowledge to those challenges and help solve them. so that those challenges can be addressed through a systematic portal.</p>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
@@ -149,12 +150,12 @@
 				<div class="row align-items-center col-spacing-50">
 					<!-- About Image -->
 					<div class="col-12 col-lg-6">
-						<img src="../assets/images/col-1.jpg" alt="">
+						<img src="../assets/images/img8.jpg" alt="">
 					</div>
 					<!-- About Content -->
 					<div class="col-12 col-lg-6">
 						<h3 class="font-weight-light">We believe that teamwork divides the tasks and multiplies the success</h3>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+						<p>We have created a form, which lead and guide the users to state their challenges throw several questions specified in this form. This form will auto generate a reports and statistics to help participant into working together to solve the challenges.</p>
 						<a class="button button-lg button-radius button-dark margin-top-40" href="#">Learn more</a>
 					</div>
 				</div><!-- end row -->
@@ -257,20 +258,7 @@
 		</div>
 		<!-- end Blog section -->
 
-		<div class="section-xl bg-image parallax" data-bg-src="../assets/images/background.jpg">
-			<div class="bg-black-06">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-12 col-lg-6">
-							<h2 class="font-weight-light margin-0">High Performance <br> Multipurpose HTML5 Template</h2>
-						</div>
-						<div class="col-12 col-lg-6 text-lg-right">
-							<a class="button button-xl button-radius button-white-3" href="#">Buy Now</a>
-						</div>
-					</div><!-- end row -->
-				</div><!-- end container -->
-			</div>
-		</div>
+		
 
 		<!-- Clients section -->
 		<div class="section border-top">
@@ -332,9 +320,9 @@
 						<div class="col-6 col-sm-6 col-lg-3">
 							<h6 class="font-small font-weight-normal uppercase">Contact Info</h6>
 							<ul class="list-unstyled">
-								<li>121 King St, Melbourne VIC 3000</li>
-								<li>contact@example.com</li>
-								<li>+(123) 456 789 01</li>
+								<li>Manama, Bahrain Bay</li>
+								<li>Smartportalchallenge@gmail.com</li>
+								<li>+(973) 17821111</li>
 							</ul>
 						</div>
 					</div><!-- end row(1) -->
