--- a/corporate-1.html
+++ b/corporate-1.html
@@ -58,7 +58,7 @@
 									</ul>
 								</li>
 							<li class="nav-dropdown-item">
-									<a class="nav-dropdown-link" href="#">Submit a Challenge</a>
+									<a class="nav-dropdown-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdebCp0wXQ05BSZdRomsiiIvRVEBr5OttnNUnB899vCsTa7Rw/viewform?usp=sf_link" target="_blank">Submit a Challenge</a>
 							</li>
 							</ul>
 						</li>
@@ -97,7 +97,7 @@
 						<div class="row">
 							<div class="col-12 col-md-10 col-lg-8 col-xl-6">
 								<h1>Submit Your Challenges Now!</h1>
-								<a class="button button-lg button-radius button-white-3 margin-top-20" href="#">Learn more</a>
+								<a class="button button-lg button-radius button-white-3 margin-top-20" href="https://docs.google.com/forms/d/e/1FAIpQLSdebCp0wXQ05BSZdRomsiiIvRVEBr5OttnNUnB899vCsTa7Rw/viewform?usp=sf_link" target="_blank">Submit a Challenge</a>
 							</div>
 						</div><!-- end row -->
 					</div><!-- end container -->
@@ -126,7 +126,7 @@
 					<div class="col-12 col-md-4">
 						<i class="ti-briefcase text-dark"></i>
 						<h5 class="font-weight-normal margin-top-20">Centralized</h5>
-						<p>There are many undefined challenges in the public sector and not link to each other’s in one place  which most of entities challenges are scattered among the organization
+						<p>There are many undefined challenges in the public sector and not link to each other’s in one place  which most of entities challenges are scattered among the organization
 .</p>
 					</div>
 					<div class="col-12 col-md-4">
@@ -150,7 +150,7 @@
 				<div class="row align-items-center col-spacing-50">
 					<!-- About Image -->
 					<div class="col-12 col-lg-6">
-						<img src="../assets/images/img8.jpg" alt="">
+						<img src="../assets/images/img8.png" alt="">
 					</div>
 					<!-- About Content -->
 					<div class="col-12 col-lg-6">
